<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_bg"
    tools:context="memorytrainer.jwise200.com.pushupsatdawn.Activities.AddExercise">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="@color/colorAccent"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeField"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/type"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="#ffffff"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/countField"
        android:layout_below="@+id/typeField"
        android:layout_centerHorizontal="true"
        android:text="@string/count"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/createNewExerciseButton"
        android:layout_below="@+id/countField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/doneButton"
        android:layout_below="@+id/createNewExerciseButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>
