<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Incorrect"
    android:background="@color/red">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/exampleStreak"
        android:id="@+id/incorrectStreak"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/incorrect"
        android:id="@+id/incorrectText"
        android:layout_above="@id/incorrectStreak"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueText"
        android:id="@+id/incorrectContinueButton"
        android:layout_below="@id/incorrectStreak"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>
